<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ELO_SDK_API_Demo v12</string>
    <string name="hello_world">ELO SDK API Demo</string>
    <string name="uart_on">Click to turn UART ON</string>
    <string name="uart_off">Click to turn UART OFF</string>
    <string name="test_bcr">Click to Read Bar Code</string>
    <string name="test_bcr_hint">The content scanned from BCR</string>
    <string name="test_cd_open">Click to Open CashDrawer</string>
    <string name="di_1">DI-1</string>
    <string name="update_cd_voltage">Click to switch CashDrawer voltage</string>
    <string name="cd_voltage_12v">12V</string>
    <string name="cd_voltage_24v">24V</string>
    <string name="test_cfd_set_line1">Click To Test CFD (Set Line 1 \- 1234567890ABCDEF)</string>
    <string name="enable_ext_touch">Click To Enable Ext Touch</string>
    <string name="disable_ext_touch">Click To Disable Ext Touch</string>
    <string name="test_print_self_test">Click To Test Printer (Self Test 9600)</string>
    <string name="test_print_self_test_2">Click To Test Printer (Self Test 19200)</string>
    <string name="test_ttyUSB_device">Click To Test ttyUSB device (ttyUSB10)</string>
    <string name="test_monitor_USBHub">Click To Monitor USB Hub, Reset it if Error Occurs</string>
    <string name="test_monitor_USBHub_not">Click Not To Monitor USB Hub</string>
    <string name="pull_gpio_high">Pull GPIO EXT HIGH</string>
    <string name="pull_gpio_low">Pull GPIO EXT LOW</string>
    <string name="gpio_in_1">GPIO Input 1: </string>
    <string name="gpio_in_2">GPIO Input 2: </string>
    <string name="gpio_value_high">HIGH</string>
    <string name="gpio_value_low">LOW</string>
    <string name="set_brightness">Click To set brightness (Loop change from 80% to 0% with every click)</string>
    <string name="enable_brightness_timer">Click To enable timed brightness feature</string>
    <string name="disable_brightness_timer">Click To disable timed brightness feature</string>
    <string name="set_brightness_timer">Set brightness timer (Between current minute and next minute to 40%)</string>
    <string name="reset_to_default">Reset to default for timed brightness feature</string>
    <string name="test_idle_mode">Click to active idle mode (deactive automatically after 5s)</string>
    <string name="usb_port_on">Click to disable usb port1</string>
    <string name="usb_port_off">Click to enable usb port1</string>
    <string name="poe_observer">Power source (PoE/AC): </string>
    <string name="power_source_poe">PoE</string>
    <string name="power_source_ac">AC</string>
    <string name="disable_screen_timeout">Click To disable screen timeout</string>
    <string name="enable_screen_timeout">Click To enable screen timeout</string>
    <string name="set_usb_boost_mode">Click To change USB boost mode (Loop change from None to High with every click)</string>
    <string name="set_heap_size">Click To set dalvik.vm.heapsize (Loop change from 256m to 1024m with every click)</string>
    <string name="set_heap_growth_limit">Click To set dalvik.vm.heapgrowthlimit (Loop change from 96m to 384m with every click)</string>
    <string name="change_ethernet_link_mode">Set Ethernet speed and duplex:</string>
    <string-array name="ethernet_link_mode_choices" translatable="false">
        <item>@string/ethernet_link_mode_auto</item>
        <item>@string/ethernet_link_mode_10mb_half </item>
        <item>@string/ethernet_link_mode_10mb_full</item>
        <item>@string/ethernet_link_mode_100mb_half</item>
        <item>@string/ethernet_link_mode_100mb_full</item>
        <item>@string/ethernet_link_mode_1000mb_full</item>
    </string-array>
    <string-array name="ethernet_link_mode_values" translatable="false">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
    </string-array>
    <string name="ethernet_link_mode_auto">auto</string>
    <string name="ethernet_link_mode_10mb_half">10Mb/Half</string>
    <string name="ethernet_link_mode_10mb_full">10Mb/Full</string>
    <string name="ethernet_link_mode_100mb_half">100Mb/Half</string>
    <string name="ethernet_link_mode_100mb_full">100Mb/Full</string>
    <string name="ethernet_link_mode_1000mb_full">1000Mb/Full</string>
    <string name="external_led_onoff">turn on/off external led:</string>
    <string-array name="external_led_mode_choices" translatable="false">
        <item>@string/external_led_off</item>
        <item>@string/external_led_green_on </item>
        <item>@string/external_led_red_on </item>
    </string-array>
    <string-array name="external_led_mode_values" translatable="false">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
    </string-array>
    <string name="external_led_off">turn off LED light peripheral</string>
    <string name="external_led_green_on">turn on green LED light peripheral</string>
    <string name="external_led_red_on">turn on red LED light peripheral</string>
    <string name="poe_settings_button">PoE setting demo</string>
    <string name="poe_power_manager_settings_title">PoE power manager API demo</string>
    <string name="poe_bluetooth_title">Bluetooth</string>
    <string name="poe_wifi_title">WLAN</string>
    <string name="brightness_title">Brightness</string>
    <string name="media_volume_option_title">Media volume</string>
    <string name="poe_gpio">GPIO</string>
    <string name="poe_hdmi">External display</string>
    <string name="poe_power_title">PoE power status</string>
    <string name="poe_power_summary" formatted="false">PoE+ Limit: <xliff:g id="max">%s</xliff:g>W, User Controllable: <xliff:g id="used">%s</xliff:g>W of <xliff:g id="total">%s</xliff:g>W used</string>
    <string name="poe_brightness_summary" formatted="false">Brightness (<xliff:g id="brighness">%s</xliff:g>, <xliff:g id="power">%s</xliff:g>W)</string>
    <string name="poe_media_summary" formatted="false">Volume (<xliff:g id="volume">%s</xliff:g>, <xliff:g id="power">%s</xliff:g>W)</string>
    <string name="poe_feature_onoff_summary">Allow/Disallow feature when the power source is PoE (<xliff:g id="power">%s</xliff:g>W)</string>
    <string name="poe_restore_progress_title" >Restoring PoE settings</string>
    <string name="poe_restore_progress_text">Please wait...</string>
    <string name="poe_menu_restore">Restore from XML</string>
    <string name="usb_port_control_usb_port1_micro_usb">USB Port 1 (Micro USB)</string>
    <string name="usb_port_control_usb_port1_mini_usb">USB Port 1 (Mini USB)</string>
    <string name="usb_port_control_usb_port1_type_a_usb">USB Port 1 (Type A USB)</string>
    <string name="usb_port_control_usb_port2_micro_usb">USB Port 2 (Micro USB)</string>
    <string name="usb_port_control_usb_port2_mini_usb">USB Port 2 (Mini USB)</string>
    <string name="usb_port_control_usb_port2_type_a_usb">USB Port 2 (Type A USB)</string>
    <string name="usb_port_control_usb_port2_type_c_usb">USB Port 2 (Type C USB)</string>
    <string name="usb_port_control_usb_port3_micro_usb">USB Port 3 (Micro USB)</string>
    <string name="usb_port_control_usb_port3_type_a_usb">USB Port 3 (Type A USB)</string>
    <string name="usb_port_control_usb_port4_micro_usb">USB Port 4 (Micro USB)</string>
    <string name="usb_port_control_usb_port4_type_a_usb">USB Port 4 (Type A USB)</string>
    <string name="usb_port_control_usb_port5_type_a_usb">USB Port 5 (Type A USB)</string>
    <string name="usb_port_control_usb_port5_micro_usb">USB Port 5 (Micro USB)</string>
    <string name="usb_port_control_usb_port6_type_a_usb">USB Port 6 (Type A USB)</string>
    <string name="usb_port_control_usb_port6_micro_usb">USB Port 6 (Micro USB)</string>
    <string name="poe_power_overflow">Power over Ethernet (PoE) Limit Reached</string>
    <string name="enable_uvc_camera">Click to enable UVC camera</string>
    <string name="disable_uvc_camera">Click to disable UVC camera</string>
    <string name="uvc_camera_warning_title">UVC camera</string>
    <string name="uvc_camera_warning_message">Now reboot your device for settings to take effect</string>
    <string name="lights_led_settings_button">click to launch LED lights API demo</string>
    <string name="lights_led_settings_title">LED lights API demo</string>
    <string name="customer_led_0">Power LED:</string>
    <string name="customer_led_1">Funcion LED:</string>
    <string name="indication_led">Indication LED:</string>
    <string name="inner_light_off">Off</string>
    <string name="inner_light_green_on">Green on</string>
    <string name="inner_light_red_on">Red on</string>
    <string name="inner_light_orange_on">Orange on</string>
    <string name="inner_light_white_on">White on</string>
    <string name="inner_light_blue_on">Blue on</string>
    <string name="inner_light_green_flash">Green flash</string>
    <string name="inner_light_red_flash">Red flash</string>
    <string name="inner_light_orange_flash">Orange flash</string>
    <string name="inner_light_white_flash">White flash</string>
    <string name="inner_light_blue_flash">blue flash</string>
    <string name="inner_light_green_hardware_flash">Green hardware flash</string>
    <string name="inner_light_orange_hardware_flash">Orange hardware flash</string>
    <string name="inner_light_white_hardware_flash">White hardware flash</string>
    <string-array name="customer_led_mode_choices" translatable="false">
        <item>@string/inner_light_off</item>
        <item>@string/inner_light_green_on </item>
        <item>@string/inner_light_orange_on </item>
        <item>@string/inner_light_green_flash </item>
        <item>@string/inner_light_orange_flash </item>
    </string-array>
    <string-array name="customer_led_mode_values" translatable="false">
        <item>"0"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"5"</item>
        <item>"6"</item>
    </string-array>
    <string-array name="indication_led_mode_choices" translatable="false">
        <item>@string/inner_light_off</item>
        <item>@string/inner_light_white_on </item>
        <item>@string/inner_light_orange_on </item>
        <item>@string/inner_light_white_flash </item>
        <item>@string/inner_light_orange_flash </item>
    </string-array>
    <string-array name="indication_led_mode_values" translatable="false">
        <item>"0"</item>
        <item>"1"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"6"</item>
    </string-array>
    <string name="output">Code Output</string>
    <string name="ready_to_scan">Ready To Scan</string>
    <string name="scan_tip">Use built in scanner to scan a barcode</string>
    <string name="parameter">Parameter</string>
    <string name="number">Number</string>
    <string name="value">Value</string>
    <string name="set">Set</string>
    <string name="get">Get</string>
    <string name="eth_dev_list">Ethernet Devices:</string>
    <string name="proxy_settings_title">Proxy</string>
    <string name="proxy_setting">Proxy setting</string>
    <string name="proxy_address">Proxy hostname</string>
    <string name="proxy_port">Proxy port</string>
    <string name="proxy_exclusionlist">Bypass proxy for</string>
    <string name="bypass_hint">You should put valid addresses split by \",\"</string>
    <string name="proxy_url_title">"PAC URL: "</string>
    <string name="proxy_url_hint" translatable="false">https://www.example.com/proxy.pac</string>
    <string name="cfd_backlight_title">CFD brightness</string>
    <string name="cfd_backlight_switcher_title">Turn on CFD</string>
    <string name="cfd_backlight_switcher_summary">Turn on CFD if CFD is disabled</string>
    <string name="cfd_backlight_sync_with_settings_app_title">Shared with Settings application</string>
    <string name="cfd_backlight_sync_with_settings_app_summary">Update primary display and CFD backlight together</string>
</resources>