<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- customer led 0-->
        <LinearLayout
            android:id="@+id/customer_led_0_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/customer_led_0_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/customer_led_0"
                android:textSize="20sp" />
            
            <Button
                android:id="@+id/btn_customer_led_0_off"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_off" />
            
            <Button
                android:id="@+id/btn_customer_led_0_green_on"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_green_on" />
                
            <Button
                android:id="@+id/btn_customer_led_0_orange_on"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_orange_on" />
                
            <Button
                android:id="@+id/btn_customer_led_0_green_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_green_flash" />
                
            <Button
                android:id="@+id/btn_customer_led_0_orange_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_orange_flash" />

            <Button
                android:id="@+id/btn_customer_led_0_green_hardware_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_green_hardware_flash" />
                
            <Button
                android:id="@+id/btn_customer_led_0_orange_hardware_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_orange_hardware_flash" />
        </LinearLayout>
        
        <!-- customer led 1-->
        <LinearLayout
            android:id="@+id/customer_led_1_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/customer_led_1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/customer_led_1"
                android:textSize="20sp" />
            
            <Button
                android:id="@+id/btn_customer_led_1_off"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_off" />
            
            <Button
                android:id="@+id/btn_customer_led_1_red_on"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_red_on" />

            <Button
                android:id="@+id/btn_customer_led_1_blue_on"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_blue_on" />
                
            <Button
                android:id="@+id/btn_customer_led_1_red_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_red_flash" />
                
            <Button
                android:id="@+id/btn_customer_led_1_blue_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_blue_flash" />
        </LinearLayout>
        
        <!-- indication led-->
        <LinearLayout
            android:id="@+id/indication_led_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            
            <TextView
                android:id="@+id/indication_led_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/indication_led"
                android:textSize="20sp"/>
            
            <Button
                android:id="@+id/btn_indication_led_off"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_off" />
            
            <Button
                android:id="@+id/btn_indication_led_white_on"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_white_on" />
               
            <Button
                android:id="@+id/btn_indication_led_orange_on"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_orange_on" />

            <Button
                android:id="@+id/btn_indication_led_white_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_white_flash" />
                
            <Button
                android:id="@+id/btn_indication_led_orange_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_orange_flash" />

            <Button
                android:id="@+id/btn_indication_led_white_hardware_flash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/inner_light_white_hardware_flash" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

