<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BCRDemoActivity">

    <LinearLayout
        android:paddingTop="20dip"
        android:paddingLeft="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/bg_scanner">

            <ImageView
                android:id="@+id/decode_image"
                android:layout_width="400dp"
                android:layout_height="300dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/code_output"
            android:paddingTop="20dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/output"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dip"
        android:paddingLeft="20dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/ready_to_scan"/>

        <TextView
            android:id="@+id/scan_tip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/scan_tip"/>

    </LinearLayout>

   <TextView
        android:paddingTop="40dip"
        android:paddingLeft="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/parameter"/>

    <RelativeLayout
        android:paddingLeft="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/number"
            android:textSize="20dp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/value"
            android:textSize="20dp" />
    </RelativeLayout>

    <RelativeLayout
        android:paddingLeft="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_num"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:inputType="numberSigned" />
        
        <EditText
            android:id="@+id/edit_val"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal|text" />

    </RelativeLayout>

    <RelativeLayout
        android:paddingLeft="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="btnGet_click"
            android:text="@string/get" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="btnSet_click"
            android:text="@string/set" />

    </RelativeLayout>

</LinearLayout>