<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:scrollIndicators="top|bottom">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dip">
        <LinearLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        </LinearLayout>
        <!-- Device list -->
        <TextView android:id="@+id/eth_dev_list_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dip"
                  android:layout_marginStart="16dip"
                  android:layout_marginEnd="16dip"
                  android:orientation="vertical"
                  android:gravity="start"
                  android:text="@string/eth_dev_list"
                  android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- The entries will be set programmatically -->
        <Spinner android:id="@+id/eth_dev_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

        <!-- Proxy settings -->
        <TextView android:id="@+id/eth_proxy_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dip"
                  android:layout_marginStart="16dip"
                  android:layout_marginEnd="16dip"
                  android:orientation="vertical"
                  android:gravity="start"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:text="@string/proxy_setting" />
        <!-- Proxy setting: Proxy setting type -->    
        <Spinner android:id="@+id/proxy_type_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/proxy_settings_title"
                    android:entries="@array/ethernet_proxy_settings" />
        <!-- PAC proxy -->
        <LinearLayout
            android:id="@+id/pac_proxy_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView android:id="@+id/pac_proxy_title"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dip"
                      android:layout_marginStart="16dip"
                      android:layout_marginEnd="16dip"
                      android:orientation="vertical"
                      android:gravity="start"
                      android:text="@string/proxy_url_title" />
            <EditText android:id="@+id/proxy_pac_edit"
                      android:hint="@string/proxy_url_hint"
                      android:inputType="textNoSuggestions"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:paddingLeft="10dip"
                      android:textAlignment="viewStart"
                      android:singleLine="true" />
        </LinearLayout>
        <!-- static proxy -->
        <LinearLayout
            android:id="@+id/static_proxy_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView android:id="@+id/eth_proxy_address"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dip"
                      android:layout_marginStart="16dip"
                      android:layout_marginEnd="16dip"
                      android:orientation="vertical"
                      android:gravity="start"
                      android:text="@string/proxy_address" />
            <EditText android:id="@+id/proxy_address_edit"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:paddingLeft="10dip"
                      android:textAlignment="viewStart"
                      android:singleLine="true" />

            <TextView android:id="@+id/eth_proxy_port"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dip"
                      android:layout_marginStart="16dip"
                      android:layout_marginEnd="16dip"
                      android:orientation="vertical"
                      android:gravity="start"
                      android:text="@string/proxy_port" />
            <EditText android:id="@+id/proxy_port_edit"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:paddingLeft="10dip"
                      android:textAlignment="viewStart"
                      android:singleLine="true"
                      android:inputType="number" />

           <TextView android:id="@+id/eth_proxy_exclusionlist"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dip"
                      android:layout_marginStart="16dip"
                      android:layout_marginEnd="16dip"
                      android:orientation="vertical"
                      android:gravity="start"
                      android:text="@string/proxy_exclusionlist" />
            <EditText android:id="@+id/proxy_exclusionlist"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="18sp"
                      android:paddingLeft="10dip"
                      android:textAlignment="viewStart"
                      android:hint="@string/bypass_hint"
                      android:singleLine="true"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

